# ExoPlayerText

./: settings.gradle
app/: build.gradle
app/src/androidTest/java/com/example/exoplayertext/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  JniUtils.cpp  JniUtils.h  UacDevice.cpp  UacDevice.h  UsbDevice.cpp  UsbDevice.h  log.h  native-lib.cpp
app/src/main/java/com/example/exoplayertext/: App.kt  BaseViewModel.kt  JniRepository.kt  MainActivity.kt  MainScreen.kt  MyAppExoPlayer.kt  PlayerErrorMessageProvider.kt
app/src/main/java/com/example/exoplayertext/descriptors/: ByteStream.java  Usb10ACHeader.java  Usb10ACInputTerminal.java  Usb10ACMixerUnit.java  Usb10ACOutputTerminal.java  Usb10ASFormatI.java  Usb10ASFormatII.java  Usb10ASGeneral.java  Usb20ACHeader.java  Usb20ACInputTerminal.java  Usb20ACMixerUnit.java  Usb20ACOutputTerminal.java  Usb20ASFormatI.java  Usb20ASFormatII.java  Usb20ASFormatIIEx.java  Usb20ASFormatIII.java  Usb20ASGeneral.java  UsbACAudioControlEndpoint.java  UsbACAudioStreamEndpoint.java  UsbACEndpoint.java  UsbACFeatureUnit.java  UsbACHeaderInterface.java  UsbACInterface.java  UsbACInterfaceUnparsed.java  UsbACMidiEndpoint.java  UsbACMixerUnit.java  UsbACSelectorUnit.java  (+15 more)
app/src/main/res/drawable/: ic_pause.xml  ic_play.xml
app/src/main/res/values/: colors.xml  strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/main/res/xml/: device_filter.xml
app/src/test/java/com/example/exoplayertext/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
(+16 files in other folders)
